# quantconnect-mcp

./: .dxtignore  .env.example  .gitignore  Dockerfile  README.md  main.py  manifest.json  pyproject.toml  quantconnect-mcp.dxt
quantconnect_mcp/: __init__.py  main.py
quantconnect_mcp/src/: cli.py  server.py  utils.py
quantconnect_mcp/src/adapters/: __init__.py  jupyter_kernel_client.py  logging_config.py  research_session.py  research_session_jupyter.py  research_session_lean_cli.py  research_session_old.py.bak  session_manager.py
quantconnect_mcp/src/resources/: __init__.py  system_resources.py
quantconnect_mcp/src/tools/: __init__.py  analysis_tools.py  auth_tools.py  backtest_tools.py  data_tools.py  file_tools.py  live_tools.py  optimization_tools.py  portfolio_tools.py  project_tools.py  quantbook_tools.py  universe_tools.py
src/: __init__.py  server.py
src/auth/: __init__.py  quantconnect_auth.py
src/resources/: __init__.py  system_resources.py
src/tools/: __init__.py  analysis_tools.py  auth_tools.py  backtest_tools.py  data_tools.py  file_tools.py  portfolio_tools.py  project_tools.py  quantbook_tools.py  universe_tools.py
tests/: __init__.py  test_auth.py  test_server.py
