[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantconnect-mcp"
version = "0.1.11"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arch>=7.2.0",
    "fastmcp>=2.7.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.3.0",
    "psutil>=7.0.0",
    "pytest-asyncio>=1.0.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "quantconnect-lean",
    "quantconnect>=0.1.0",
]

[project.scripts]
quantconnect-mcp = "quantconnect_mcp.main:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
    "tomlkit>=0.13.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quantconnect_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:.*coroutine.*AsyncMockMixin.*never awaited:RuntimeWarning"
]
